--- a/dbt_project/packages.yml
+++ b/dbt_project/packages.yml
@@ -2,7 +2,7 @@ packages:
   - package: dbt-labs/dbt_utils
     version: ">=1.1.0"
     
-  - package: dbt-labs/dbt_date
+  - package: calogica/dbt_date
     version: ">=0.10.0"
     
   - package: calogica/dbt_expectations
